--- a/app/src/main/res/layout/content_login_page.xml
+++ b/app/src/main/res/layout/content_login_page.xml
@@ -14,6 +14,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        />
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
