--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,8 @@
     <color name="colorAccent">#D81B60</color>
     <color name="light_brown">#880E4F</color>
     <color name="purple">#4A148C</color>
-    <color name="blue">#01579B</color>
+    <color name="blue">#2F0FFF</color>
+    <color name="light_green">#1CFF1C</color>
+    <color name="green">#1B5E20</color>
+    <color name="yellow">#FFFB00</color>
 </resources>
