code cleaned , bug fixes

--- a/app/src/main/res/layout/app_bar_login_page.xml
+++ b/app/src/main/res/layout/app_bar_login_page.xml
@@ -29,7 +29,7 @@
 
     <include layout="@layout/content_login_page" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -39,6 +39,6 @@
         android:layout_marginEnd="17dp"
         android:layout_marginRight="17dp"
         android:layout_marginBottom="11dp"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:srcCompat="@android:drawable/ic_input_add" />-->
 
 </RelativeLayout>
